# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
page_analyzer/: app.py  dbase.py  html.py  valid.py
page_analyzer/templates/: analyzer.html  base.html  url.html  urls.html
page_analyzer/templates/components/: message.html  navbar.html
page_analyzer/templates/errors/: 500.html
tests/: test_app.py
